--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,9 @@
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <meta
             name="viewport"
-            content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+            content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content"
         />
-        <title>My Poké App</title>
+        <title>KLDMN</title>
     </head>
     <body>
         <div id="root"></div>
