--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <meta
             name="viewport"
-            content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no, interactive-widget=resizes-content"
         />
         <title>KLDMN</title>
     </head>
